# AlphaFragment

./: .gitignore  AlphaFragment usage guide.ipynb  LICENSE.txt  README.md  __init__.py  conf.py  example_AFprep_workflow.py  example_workflow.py  expanding the screen guide.ipynb  index.rst  pyproject.toml  readthedocs.yaml  testing recursive fragmentation on real.py  testing.py  testing_recursive_fragmentation.py
AFprep_func/: AlphaFoldDB_domain_identification.py  UniProt_data_fetch.py  UniProt_domain_fetch.py  alphafold_db_domain_identification.py  classes.py  compile_domains.py  fragment_fasta_creation.py  fragment_file_creation.py  fragment_protein.py  fragment_proteins_from_csv.py  fragmentation_methods.py  long_domains.py  plot_fragments.py  process_proteins_csv.py  protein_add_domains.py  protein_init.py  recursive_fragment_finding.py  testing recursive fragmentation on real.py  testing.py  uniprot_fetch.py
docs/: UniProt_data_fetch.rst  alphafold_db_domain_identification.rst  classes.rst  compile_domains.rst  conf.py  domain_compilation.rst  fragment_file_creation.rst  fragment_protein.rst  fragment_proteins_from_csv.rst  fragmentation_methods.rst  index.rst  installation.rst  introduction.rst  long_domains.rst  plot_domains.rst  plot_fragments.rst  process_proteins_csv.rst  protein_add_domains.rst  protein_fragmentation.rst  protein_init.rst  recursive_fragment_finding.rst  requirements.txt  uniprot_fetch.rst  usage_guide.rst
env/: pyvenv.cfg
functions/: __init__.py  classes.py  fragment_protein.py  long_domains.py
sample_data/: usage_guide_sample.csv  (+2 more)
(+52 files in other folders)
