[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AFprep"
description = "Scripts to prepare optimised input fragment boundaries/fasta files for AlphaFold"
authors = [
    {name = "Ingelise Holland-Kaye", email = "ingelise.holland-kaye@reuben.ox.ac.uk"},
version = "0.1.0"
dependencies = [
    "pandas>=2.2.0", "requests>=2.31.0",
]
