[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlphaFragment"
description = "Scripts to prepare optimised input fragment boundaries/fasta files for AlphaFold"
authors = [
    {name = "Ingelise Holland-Kaye", email = "ingelise.holland-kaye@reuben.ox.ac.uk"},
]
version = "1.0.1"
dependencies = [
    "pandas>=1.3.5",
    "requests>=2.31.0",
    "matplotlib>=3.5.3",
]
